# Antivirus

./: CMakeLists.txt  README.md  database.txt  main.cpp
quarantine/: files_on_quarantine.txt
